fix: display new proposal button on firefox for small screens (#2492)

--- a/src/components/layout/layouts.module.css
+++ b/src/components/layout/layouts.module.css
@@ -30,6 +30,7 @@ div.customPageDetails {
   flex-direction: column;
   justify-content: space-between;
   overflow: visible;
+  max-width: 100%;
 }
 
 .titleAndSubtitleWrapper {
